# butterfly

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  utils.py
.github/workflows/: auto-merge.yaml  dependabot-automerge.yml  python-package.yml  python-publish.yml  scheduled-release.yml
examples/: twitter_example.py
interfaces/: auth.py  social.py
plugins/: __init__.py  bluesky.py  mastodon.py  twitter.py
src/: main.py  utils.py
tests/: test_auth.py  test_plugins.py  test_social.py  test_utils.py
tests/plugins/: test_plugin.py
