[project]
name = "sbutterfly"
version = "2.0.0"
description = "Allows you to post to your socials"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["atproto>=0.0.61", "requests>=2.32.3"]

[project.scripts]
sbutterfly = "main:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main", "utils"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "cryptography>=43.0.1",
  "filelock>=3.16.0",
  "mypy>=1.15.0",
  "pip>=25.3",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
  "urllib3>=2.2.2",
  "uv>=0.7.8",
  "virtualenv>=20.26.1",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
install_types = true
non_interactive = true
