[project]
name = "sbutterfly"
version = "2.3.1"
description = "Allows you to post to your socials"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["atproto", "requests"]

[project.scripts]
sbutterfly = "main:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main", "utils"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "mypy",
  "pip",
  "pre-commit",
  "pytest",
  "ruff",
  "uv",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
install_types = true
non_interactive = true
